--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -310,63 +310,351 @@
 	Finally, these computed increments are applied to update the estimates for the horizontal position and linear velocities.
 	
 	\section{Results \& Visualization}
-	
+
+% ==================== 2D TRAJECTORIES ====================
 \begin{figure}[H]
-	\centering
-	\includegraphics[width=1\linewidth]{"Final State Estimation Basic"}
-	\caption{The results of the simulation for the "basic" scenario.}
-	\label{fig:final-state-estimation-basic}
+\centering
+\includegraphics[width=0.9\linewidth]{trajectory-basic}
+\caption{2D trajectory for the basic hover scenario, comparing EKF estimate against the real noisy path.}
+\label{fig:trajectory-basic}
 \end{figure}
 
 \begin{figure}[H]
-	\centering
-	\includegraphics[width=1\linewidth]{"Final State Estimation Horizontal"}
-	\caption{The results of the simulation for the "horizontal" scenario.}
-	\label{fig:final-state-estimation-horizontal}
+\centering
+\includegraphics[width=0.9\linewidth]{trajectory-horizontal}
+\caption{2D trajectory for the horizontal recovery scenario, showing EKF performance during lateral motion.}
+\label{fig:trajectory-horizontal}
 \end{figure}
 
 \begin{figure}[H]
-	\centering
-	\includegraphics[width=1\linewidth]{"Final State Estimation Roll"}
-	\caption{The results of the simulation for the "roll" scenario.}
-	\label{fig:final-state-estimation-roll}
+\centering
+\includegraphics[width=0.9\linewidth]{trajectory-roll}
+\caption{2D trajectory for the 360° roll scenario, illustrating EKF tracking during aggressive rotational motion.}
+\label{fig:trajectory-roll}
 \end{figure}
 
 \begin{figure}[H]
-	\centering
-	\includegraphics[width=1\linewidth]{"Final State Estimation Fall"}
-	\caption{The results of the simulation for the "fall" scenario.}
-	\label{fig:final-state-estimation-fall}
+\centering
+\includegraphics[width=0.9\linewidth]{trajectory-fall}
+\caption{2D trajectory for the straight fall recovery scenario, demonstrating EKF accuracy during descent.}
+\label{fig:trajectory-fall}
 \end{figure}
 
-% --- ROBUSTNESS FIGURES ---
-
+% ==================== INDIVIDUAL STATE PLOTS – BASIC ====================
 \begin{figure}[H]
-	\centering
-	\includegraphics[width=1\linewidth]{"Robustness Horizontal"}
-	\caption{The results of the robustness test for the "horizontal" scenario.}
-	\label{fig:robustness-horizontal}
-\end{figure}
-
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=1\linewidth]{"Robustness Roll"}
-	\caption{The results of the robustness test for the "roll" scenario.}
-	\label{fig:robustness-roll}
+\centering
+\includegraphics[width=0.9\linewidth]{state_x-basic}
+\caption{Horizontal position ($x$) over time for the basic scenario.}
+\label{fig:state-x-basic}
 \end{figure}
 
 \begin{figure}[H]
-	\centering
-	\includegraphics[width=1\linewidth]{"Robustness Fall"}
-	\caption{The results of the robustness test for the "fall" scenario.}
-	\label{fig:robustness-fall}
+\centering
+\includegraphics[width=0.9\linewidth]{state_dx_dt-basic}
+\caption{Horizontal velocity ($\dot{x}$) over time for the basic scenario.}
+\label{fig:state-dx-basic}
 \end{figure}
 
 \begin{figure}[H]
-	\centering
-	\includegraphics[width=1\linewidth]{"Robustness Basic"}
-	\caption{The results of the robustness test for the "basic" scenario.}
-	\label{fig:robustness-basic}
+\centering
+\includegraphics[width=0.9\linewidth]{state_y-basic}
+\caption{Vertical position ($y$) over time for the basic scenario.}
+\label{fig:state-y-basic}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_dy_dt-basic}
+\caption{Vertical velocity ($\dot{y}$) over time for the basic scenario.}
+\label{fig:state-dy-basic}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_theta-basic}
+\caption{Pitch angle ($\theta$) over time for the basic scenario.}
+\label{fig:state-theta-basic}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_dtheta_dt-basic}
+\caption{Pitch rate ($\dot{\theta}$) over time for the basic scenario.}
+\label{fig:state-dtheta-basic}
+\end{figure}
+
+% ==================== INDIVIDUAL STATE PLOTS – HORIZONTAL ====================
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_x-horizontal}
+\caption{Horizontal position ($x$) over time for the horizontal recovery scenario.}
+\label{fig:state-x-horizontal}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_dx_dt-horizontal}
+\caption{Horizontal velocity ($\dot{x}$) over time for the horizontal recovery scenario.}
+\label{fig:state-dx-horizontal}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_y-horizontal}
+\caption{Vertical position ($y$) over time for the horizontal recovery scenario.}
+\label{fig:state-y-horizontal}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_dy_dt-horizontal}
+\caption{Vertical velocity ($\dot{y}$) over time for the horizontal recovery scenario.}
+\label{fig:state-dy-horizontal}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_theta-horizontal}
+\caption{Pitch angle ($\theta$) over time for the horizontal recovery scenario.}
+\label{fig:state-theta-horizontal}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_dtheta_dt-horizontal}
+\caption{Pitch rate ($\dot{\theta}$) over time for the horizontal recovery scenario.}
+\label{fig:state-dtheta-horizontal}
+\end{figure}
+
+% ==================== INDIVIDUAL STATE PLOTS – ROLL ====================
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_x-roll}
+\caption{Horizontal position ($x$) over time for the roll scenario.}
+\label{fig:state-x-roll}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_dx_dt-roll}
+\caption{Horizontal velocity ($\dot{x}$) over time for the roll scenario.}
+\label{fig:state-dx-roll}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_y-roll}
+\caption{Vertical position ($y$) over time for the roll scenario.}
+\label{fig:state-y-roll}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_dy_dt-roll}
+\caption{Vertical velocity ($\dot{y}$) over time for the roll scenario.}
+\label{fig:state-dy-roll}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_theta-roll}
+\caption{Pitch angle ($\theta$) over time for the roll scenario.}
+\label{fig:state-theta-roll}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_dtheta_dt-roll}
+\caption{Pitch rate ($\dot{\theta}$) over time for the roll scenario.}
+\label{fig:state-dtheta-roll}
+\end{figure}
+
+% ==================== INDIVIDUAL STATE PLOTS – FALL ====================
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_x-fall}
+\caption{Horizontal position ($x$) over time for the fall recovery scenario.}
+\label{fig:state-x-fall}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_dx_dt-fall}
+\caption{Horizontal velocity ($\dot{x}$) over time for the fall recovery scenario.}
+\label{fig:state-dx-fall}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_y-fall}
+\caption{Vertical position ($y$) over time for the fall recovery scenario.}
+\label{fig:state-y-fall}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_dy_dt-fall}
+\caption{Vertical velocity ($\dot{y}$) over time for the fall recovery scenario.}
+\label{fig:state-dy-fall}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_theta-fall}
+\caption{Pitch angle ($\theta$) over time for the fall recovery scenario.}
+\label{fig:state-theta-fall}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{state_dtheta_dt-fall}
+\caption{Pitch rate ($\dot{\theta}$) over time for the fall recovery scenario.}
+\label{fig:state-dtheta-fall}
+\end{figure}
+
+% ==================== ESTIMATION ERROR PLOTS ====================
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{estimation_errors-basic}
+\caption{Absolute estimation errors for all states over time (basic scenario), comparing EKF and running mean filters.}
+\label{fig:error-basic}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{estimation_errors-horizontal}
+\caption{Absolute estimation errors for all states over time (horizontal recovery scenario).}
+\label{fig:error-horizontal}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{estimation_errors-roll}
+\caption{Absolute estimation errors for all states over time (roll scenario).}
+\label{fig:error-roll}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{estimation_errors-fall}
+\caption{Absolute estimation errors for all states over time (fall recovery scenario).}
+\label{fig:error-fall}
+\end{figure}
+
+% ==================== NOISE LEVELS PLOTS ====================
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{noise_levels-basic}
+\caption{Process and measurement noise amplitudes for the basic scenario robustness analysis.}
+\label{fig:noise-levels-basic}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{noise_levels-horizontal}
+\caption{Process and measurement noise amplitudes for the horizontal recovery scenario robustness analysis.}
+\label{fig:noise-levels-horizontal}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{noise_levels-roll}
+\caption{Process and measurement noise amplitudes for the roll scenario robustness analysis.}
+\label{fig:noise-levels-roll}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{noise_levels-fall}
+\caption{Process and measurement noise amplitudes for the fall recovery scenario robustness analysis.}
+\label{fig:noise-levels-fall}
+\end{figure}
+
+% ==================== EKF RMSE ACROSS NOISE CONDITIONS ====================
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{robustness_rmse-basic}
+\caption{EKF RMSE across four noise levels for each state (basic scenario).}
+\label{fig:rmse-ekf-basic}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{robustness_rmse-horizontal}
+\caption{EKF RMSE across four noise levels for each state (horizontal recovery scenario).}
+\label{fig:rmse-ekf-horizontal}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{robustness_rmse-roll}
+\caption{EKF RMSE across four noise levels for each state (roll scenario).}
+\label{fig:rmse-ekf-roll}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{robustness_rmse-fall}
+\caption{EKF RMSE across four noise levels for each state (fall recovery scenario).}
+\label{fig:rmse-ekf-fall}
+\end{figure}
+
+% ==================== RMSE GROWTH – LOG SCALE ====================
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{rmse_growth_log-basic}
+\caption{RMSE growth for $x$ and $\dot{x}$ under increasing noise (log scale, basic scenario).}
+\label{fig:rmse-growth-log-basic}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{rmse_growth_log-horizontal}
+\caption{RMSE growth for $x$ and $\dot{x}$ under increasing noise (log scale, horizontal recovery scenario).}
+\label{fig:rmse-growth-log-horizontal}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{rmse_growth_log-roll}
+\caption{RMSE growth for $x$ and $\dot{x}$ under increasing noise (log scale, roll scenario).}
+\label{fig:rmse-growth-log-roll}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{rmse_growth_log-fall}
+\caption{RMSE growth for $x$ and $\dot{x}$ under increasing noise (log scale, fall recovery scenario).}
+\label{fig:rmse-growth-log-fall}
+\end{figure}
+
+% ==================== RMSE GROWTH – LINEAR SCALE ====================
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{rmse_growth_linear-basic}
+\caption{RMSE growth for $y$, $\dot{y}$, $\theta$, and $\dot{\theta}$ under increasing noise (linear scale, basic scenario).}
+\label{fig:rmse-growth-linear-basic}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{rmse_growth_linear-horizontal}
+\caption{RMSE growth for $y$, $\dot{y}$, $\theta$, and $\dot{\theta}$ under increasing noise (linear scale, horizontal recovery scenario).}
+\label{fig:rmse-growth-linear-horizontal}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{rmse_growth_linear-roll}
+\caption{RMSE growth for $y$, $\dot{y}$, $\theta$, and $\dot{\theta}$ under increasing noise (linear scale, roll scenario).}
+\label{fig:rmse-growth-linear-roll}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.9\linewidth]{rmse_growth_linear-fall}
+\caption{RMSE growth for $y$, $\dot{y}$, $\theta$, and $\dot{\theta}$ under increasing noise (linear scale, fall recovery scenario).}
+\label{fig:rmse-growth-linear-fall}
 \end{figure}
 
 	\begin{table}[H]
