--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -612,28 +612,28 @@
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{estimation_errors-basic}
-\caption{Absolute estimation errors for all states over time (basic scenario), comparing EKF and running mean filters.}
+\caption{Absolute estimation errors for all states over time (basic scenario), comparing EKF and running mean filters. While some states show varying benefit of EKF over running mean ($x$, $\dot{x}$, $\dot{y}$), and others show significant error spikes of running mean ($\theta$, $\dot{\theta}$), $y$ in particular displays constant growth of its error, while EKF keeps almost constant.}
 \label{fig:error-basic}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{estimation_errors-horizontal}
-\caption{Absolute estimation errors for all states over time (horizontal recovery scenario).}
+\caption{Absolute estimation errors for all states over time (horizontal recovery scenario). With a more control-heavy case, running mean errors show significant increase, unbound in cases of $x$, $y$ and $\theta$.}
 \label{fig:error-horizontal}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{estimation_errors-roll}
-\caption{Absolute estimation errors for all states over time (roll scenario).}
+\caption{Absolute estimation errors for all states over time (roll scenario). This challenging simulation shows unreliability of running mean for complicated system movement.}
 \label{fig:error-roll}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{estimation_errors-fall}
-\caption{Absolute estimation errors for all states over time (fall recovery scenario).}
+\caption{Absolute estimation errors for all states over time (fall recovery scenario). Not explicitly rotating system, just like the basic scenario, shows varying accuracy of running mean. Although $y$ error is now bounded, error spikes of $\theta$ and $\dot{\theta}$ can't be ignored.}
 \label{fig:error-fall}
 \end{figure}
 
@@ -641,7 +641,7 @@
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{noise_levels-basic}
-\caption{Process and measurement noise amplitudes for the basic scenario robustness analysis.}
+\caption{Process and measurement variance for robustness analysis. These values don't vary between the scenarios.}
 \label{fig:noise-levels-basic}
 \end{figure}
 
@@ -649,28 +649,28 @@
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{robustness_rmse-basic}
-\caption{EKF RMSE across four noise levels for each state (basic scenario).}
+\caption{EKF RMSE across four noise levels for each state (basic scenario). For the most part, RMSE increases along with variance, however $x$ and $\dot{x}$ are slightly different due to their progressing Euler integration error. Same trend can be expected in the other cases.}
 \label{fig:rmse-ekf-basic}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{robustness_rmse-horizontal}
-\caption{EKF RMSE across four noise levels for each state (horizontal recovery scenario).}
+\caption{EKF RMSE across four noise levels for each state (horizontal recovery scenario). As expected, $x$ is still different from the rest, for the same reasons described in Figure 36 description. Maximum RMSE values have grown compared to the basic cases because of the increased movement complexity.}
 \label{fig:rmse-ekf-horizontal}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{robustness_rmse-roll}
-\caption{EKF RMSE across four noise levels for each state (roll scenario).}
+\caption{EKF RMSE across four noise levels for each state (roll scenario). Once again, $x$ and its derivative display different RMSE progression when compared to the rest. This time, high variance leads to the highest RMSE values, even overtaking the very high variance.}
 \label{fig:rmse-ekf-roll}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{robustness_rmse-fall}
-\caption{EKF RMSE across four noise levels for each state (fall recovery scenario).}
+\caption{EKF RMSE across four noise levels for each state (fall recovery scenario). For a simple motion, same RMSE trend is seen as for the basic case, with similar RMSE values as well.}
 \label{fig:rmse-ekf-fall}
 \end{figure}
 
@@ -678,28 +678,28 @@
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{rmse_growth_log-basic}
-\caption{RMSE growth for $x$ and $\dot{x}$ under increasing noise (log scale, basic scenario).}
+\caption{RMSE growth for $x$ and $\dot{x}$ under increasing noise (log scale, basic scenario). As discussed previously, $x$ and $\dot{x}$ are system parameters that have the biggest errors. In the simplest case, running mean is not so far from the EKF in terms of robustness.}
 \label{fig:rmse-growth-log-basic}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{rmse_growth_log-horizontal}
-\caption{RMSE growth for $x$ and $\dot{x}$ under increasing noise (log scale, horizontal recovery scenario).}
+\caption{RMSE growth for $x$ and $\dot{x}$ under increasing noise (log scale, horizontal recovery scenario). Complicated movement cases are harder for running mean to keep up with. Divergence of running mean happens significantly earlier compared to EKF.}
 \label{fig:rmse-growth-log-horizontal}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{rmse_growth_log-roll}
-\caption{RMSE growth for $x$ and $\dot{x}$ under increasing noise (log scale, roll scenario).}
+\caption{RMSE growth for $x$ and $\dot{x}$ under increasing noise (log scale, roll scenario). Another control-heavy case, another early running mean divergence. Interesting difference is early divergence of $\dot{x}$.}
 \label{fig:rmse-growth-log-roll}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{rmse_growth_log-fall}
-\caption{RMSE growth for $x$ and $\dot{x}$ under increasing noise (log scale, fall recovery scenario).}
+\caption{RMSE growth for $x$ and $\dot{x}$ under increasing noise (log scale, fall recovery scenario). As stated before, in simple simulations without rotation running mean is actually comparable in efficiency with the EKF.}
 \label{fig:rmse-growth-log-fall}
 \end{figure}
 
@@ -707,28 +707,28 @@
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{rmse_growth_linear-basic}
-\caption{RMSE growth for $y$, $\dot{y}$, $\theta$, and $\dot{\theta}$ under increasing noise (linear scale, basic scenario).}
+\caption{RMSE growth for $y$, $\dot{y}$, $\theta$, and $\dot{\theta}$ under increasing noise (linear scale, basic scenario). Unlike the significant error growth of $x$ and $\dot{x}$, other system parameters RMSE growth can be displayed linearly. Measured parameters of the system have significantly higher variance multiplier required for divergence.}
 \label{fig:rmse-growth-linear-basic}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{rmse_growth_linear-horizontal}
-\caption{RMSE growth for $y$, $\dot{y}$, $\theta$, and $\dot{\theta}$ under increasing noise (linear scale, horizontal recovery scenario).}
+\caption{RMSE growth for $y$, $\dot{y}$, $\theta$, and $\dot{\theta}$ under increasing noise (linear scale, horizontal recovery scenario). The only visible difference present is some slight running mean divergence multiplier (which shows how stable EKF is with different flight cases).}
 \label{fig:rmse-growth-linear-horizontal}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{rmse_growth_linear-roll}
-\caption{RMSE growth for $y$, $\dot{y}$, $\theta$, and $\dot{\theta}$ under increasing noise (linear scale, roll scenario).}
+\caption{RMSE growth for $y$, $\dot{y}$, $\theta$, and $\dot{\theta}$ under increasing noise (linear scale, roll scenario). Another case, another running mean multiplier change, EKF stable as in the two previous examples.}
 \label{fig:rmse-growth-linear-roll}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{rmse_growth_linear-fall}
-\caption{RMSE growth for $y$, $\dot{y}$, $\theta$, and $\dot{\theta}$ under increasing noise (linear scale, fall recovery scenario).}
+\caption{RMSE growth for $y$, $\dot{y}$, $\theta$, and $\dot{\theta}$ under increasing noise (linear scale, fall recovery scenario). The last case definitely proves the point of EKF divergence multiplier stability for different flight conditions of the quadrotor system.}
 \label{fig:rmse-growth-linear-fall}
 \end{figure}
 
